--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="equip_item.h" />
     <ClInclude Include="floating_damage.h" />
+    <ClInclude Include="items.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="helm_manager.h" />
     <ClInclude Include="music.h" />
@@ -82,6 +83,7 @@
     <ClInclude Include="ui_buff.h" />
     <ClInclude Include="ui_group.h" />
     <ClInclude Include="ui_inputdialog.h" />
+    <ClInclude Include="ui_inspect.h" />
     <ClInclude Include="ui_zoneselect.h" />
     <ClInclude Include="ZealSettings.h" />
     <ClInclude Include="zone_map.h" />
@@ -152,12 +154,14 @@
     <ClCompile Include="equip_item.cpp" />
     <ClCompile Include="floating_damage.cpp" />
     <ClCompile Include="helm_manager.cpp" />
+    <ClCompile Include="items.cpp" />
     <ClCompile Include="music.cpp" />
     <ClCompile Include="survey.cpp" />
     <ClCompile Include="tick.cpp" />
     <ClCompile Include="ui_buff.cpp" />
     <ClCompile Include="ui_group.cpp" />
     <ClCompile Include="ui_inputdialog.cpp" />
+    <ClCompile Include="ui_inspect.cpp" />
     <ClCompile Include="ui_zoneselect.cpp" />
     <ClCompile Include="zone_map.cpp" />
     <ClCompile Include="miniz.c" />
