put tick constructor back in that was unintentionally removed. matched up class name casing. added operator_overloads.h to add bitmasking for enum class style enums so we don't have to worry about name collisions. add logic to make sure heap corruption warning only pops up once.

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -66,6 +66,7 @@
     <ClInclude Include="assist.h" />
     <ClInclude Include="autofire.h" />
     <ClInclude Include="bitmap_font.h" />
+    <ClInclude Include="operator_overloads.h" />
     <ClInclude Include="character_select.h" />
     <ClInclude Include="chatfilter.h" />
     <ClInclude Include="crash_handler.h" />
